[package]
name = "rustgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"


[profile.dev]
# Enable a small amount of optimization in debug mode
opt-level = 1


[profile.dev.package."*"]
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
opt-level = 3
